File routing changes again2 in index

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Ashley Dsouza</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/tooltip-component.css" />
+    <link rel="stylesheet" href="{{ 'styles/styles.css' | url }}" />
+    <link rel="stylesheet" href="{{ 'styles/tooltip-component.css' | url }}" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
-    <script type="module" src="scripts/tooltip-component.js" defer></script>
+    <script type="module" src="{{ 'scripts/tooltip-component.js' | url }}" defer></script>
   </head>
   <body>
     
